--- a/stacey.html
+++ b/stacey.html
@@ -119,7 +119,7 @@
          <div class='py-3 my-4'></div>
                   
          <h1>Ranking of Leading Causes of Death</h1>
-                  <embed src="./action-viz-embed-div (5).html"
+                  <embed src="./rank-viz-embed-div (3).html"
                  type="text/html" height="700" width="1000" />
                   
          <div class="row">
